[package]
name = "bimhd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
geo = "0.28.0"
gtfs-structures = "0.41.2"
trigram = "0.4.4"
serde = { version = "1.0.200", features = ["derive"] }
tiny_http = "0.12.0"
serde_json = "1.0.116"
url = "2.5.0"

[[bin]]
name = "bimhd"
path = "src/main.rs"
